# bibliometrics

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  IMPLEMENTATION_PLANS.md  IMPROVEMENTS.md  README.md  TECHNICAL_DOCUMENTATION.md  biblio.py  docker-compose.yaml  env_template  mkdocs.yml  package-lock.json  pyproject.toml  requirements.txt
controller/: clean_env.sh  load_daemon.sh  prepare_update.sh  process.sh
db/: CreateIndexes.sh  FileStatus.sql  ImportTable.sh  ProcessStaging.sh  get_rename_details.sh  rename_table_from_test.sh  set_biblio_db_envs.sh  validate_rename.sh
db/scopus/: PrepareForImport.sh  ProcessAllStaging.sh  RecreateAllTables.sh  ScopusAffiliation.sql  ScopusAffiliationFromStaging.sql  ScopusAuthor.sql  ScopusAuthorFromStaging.sql  ScopusAuthorKeyword.sql  ScopusAuthorship.sql  ScopusAuthorshipFromStaging.sql  ScopusAuthorshipGetAffiliation.sql  ScopusCitation.sql  ScopusCitingViews.sql  ScopusDescriptor.sql  ScopusDropViews.sql  ScopusPublication.sql  ScopusSource.sql  ScopusSourceFromStaging.sql  ScopusZipStatus.sql
db/wos/: CleanPublicationStaging.sh  CleanRelatedStaging.sh  CreateAllIndexes.sh  CreateAllNoTestIndexes.sh  PrepareForImport.sh  ProcessAllStaging.sh  RecreateAllStagingTables.sh  RenameAllTablesAndIndexes.sh  WoSAffiliation.sql  WoSAffiliationFromStaging.sql  WoSAffiliationIndexes.sql  WoSAffiliationStaging.sql  WoSAuthor.sql  WoSAuthorFromStaging.sql  WoSCitation.sql  (+44 more)
docs/: explore.md  index.md  ingest.md  inspect.md  link.md  setup.md
legacy/: alembic.ini
libbiblio/: README.md  file_status_handler.py  ingest_data.py
(+53 files in other folders)
